--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -1,9 +1,14 @@
-<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
+<div
+    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent"
+    #container>
 
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF RECOVERY OFFICER</div>
+            <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
+                TOUR DIARY & PROGRESS REPORT OF RECOVERY OFFICER
+                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Previous</button>
+            </div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -73,7 +78,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="TourPlanId" [disabled]="!edit_mode && currentActivity.R">
+                                        <mat-select formControlName="TourPlanId"
+                                                    [disabled]="!edit_mode && currentActivity.R">
                                             <mat-option>
                                                 Select
                                             </mat-option>
@@ -116,9 +122,13 @@
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerDeparture"
-                                                   [format]="DateFormat()" readonly [disabled]="!edit_mode && currentActivity.R" formControlName="DepartureFromTime"
+                                                   [format]="DateFormat()" readonly
+                                                   [disabled]="!edit_mode && currentActivity.R"
+                                                   formControlName="DepartureFromTime"
                                                    placeholder="Departure Time"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerDeparture)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -142,10 +152,13 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Arrival Time</mat-label>
-                                            <input type="text" matInput [disabled]="!edit_mode && currentActivity.R" [ngxTimepicker]="timepickerArrival"
+                                            <input type="text" matInput [disabled]="!edit_mode && currentActivity.R"
+                                                   [ngxTimepicker]="timepickerArrival"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="ArrivalAtTime"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerArrival)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -159,7 +172,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input appNumberOnly matInput placeholder="No. Of Defaulters Contacted" formControlName="NoOfDefaulterContacted"
+                                            <input appNumberOnly matInput placeholder="No. Of Defaulters Contacted"
+                                                   formControlName="NoOfDefaulterContacted"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -169,7 +183,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
                                             <input appNumberOnly placeholder="Results Of Contacts So Made" matInput
-                                                   formControlName="ResultContactMade" autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
+                                                   formControlName="ResultContactMade" autocomplete="off"
+                                                   [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
 
@@ -178,7 +193,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
                                             <input appNumberOnly matInput placeholder="Measure Boosting Up Record"
-                                                   formControlName="MeasureBoostUpRecord" autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
+                                                   formControlName="MeasureBoostUpRecord" autocomplete="off"
+                                                   [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
 
@@ -197,22 +213,35 @@
 
                         </div>
 
-                            <div class="row mt-2 mr-1">
-                                <div class="col-lg-12 text-right">
-                                    <button type="button" *ngIf="isUpdate==false && currentActivity.C && edit_mode" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
-                                    <button type="button" *ngIf="isUpdate==true && currentActivity.D && edit_mode" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
-                                    <button type="button" mat-raised-button class="mr-2" color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U && edit_mode" (click)="changeStatus('','S')">
-                                        <mat-icon class="mr-2">check_circle</mat-icon>
-                                        Submit
-                                    </button>
-                                    <button type="button"
-                                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                            mat-raised-button color="danger" *ngIf="currentActivity.C && edit_mode" (click)="onClearForm()">
-                                        <mat-icon class="mr-2"> clear_all</mat-icon>
-                                        Clear
-                                    </button>
-                                </div>
+                        <div class="row mt-2 mr-1">
+                            <div class="col-lg-12 text-right">
+                                <button type="button" *ngIf="isUpdate==false && currentActivity.C && edit_mode"
+                                        class="mr-2 bg-green" mat-raised-button color="primary"
+                                        (click)="saveTourDiary()">
+                                    <mat-icon class="mr-2">save</mat-icon>
+                                    Save
+                                </button>
+                                <button type="button" *ngIf="isUpdate==true && currentActivity.D && edit_mode"
+                                        class="mr-2 bg-green" mat-raised-button color="primary"
+                                        (click)="saveTourDiary()">
+                                    <mat-icon class="mr-2">save</mat-icon>
+                                    Update
+                                </button>
+                                <button type="button" mat-raised-button class="mr-2" color="primary"
+                                        [disabled]="checkDisable" *ngIf="currentActivity.U && edit_mode"
+                                        (click)="changeStatus('','S')">
+                                    <mat-icon class="mr-2">check_circle</mat-icon>
+                                    Submit
+                                </button>
+                                <button type="button"
+                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C && edit_mode"
+                                        (click)="onClearForm()">
+                                    <mat-icon class="mr-2"> clear_all</mat-icon>
+                                    Clear
+                                </button>
                             </div>
+                        </div>
 
                         <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                             <table class="table">
@@ -235,37 +264,42 @@
                                 <tr class="table-header-background text-center">
                                 </tr>
 
-                                    <tr class="table-header-background text-center">
-                                        <th class="border-r border-gray-400">Place</th>
-                                        <th class="border-r border-gray-400">Time</th>
-                                        <th class="border-r border-gray-400">Place</th>
-                                        <th class="border-r border-gray-400">Time</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody *ngFor="let single_list of TourDiaryList">
-                                    <tr>
-                                        <td class="border-r border-gray-400">
-                                            <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode" type="button" mat-icon-button (click)="edit(single_list); container.scrollTop = 0">
-                                                <mat-icon>edit</mat-icon>
-                                            </button>
-                                            <button  *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode" type="button" mat-icon-button (click)="delete(single_list,'C')">
-                                                <mat-icon>delete</mat-icon>
-                                            </button>
-                                        </td>
-                                        <td class="border-r border-gray-400">{{single_list.TourDate}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.PlanPurposeName}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.DepartureFromPlace}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.DepartureFromTime}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.ArrivalAtPlace}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.ArrivalAtTime}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.NoOfDefaulterContacted}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.ResultContactMade}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.MeasureBoostUpRecord}}</td>
-                                        <td class="border-r border-gray-400">{{single_list.Remarks}}</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                                <tr class="table-header-background text-center">
+                                    <th class="border-r border-gray-400">Place</th>
+                                    <th class="border-r border-gray-400">Time</th>
+                                    <th class="border-r border-gray-400">Place</th>
+                                    <th class="border-r border-gray-400">Time</th>
+                                </tr>
+                                </thead>
+                                <tbody *ngFor="let single_list of TourDiaryList">
+                                <tr>
+                                    <td class="border-r border-gray-400">
+                                        <button
+                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode"
+                                            type="button" mat-icon-button
+                                            (click)="edit(single_list); container.scrollTop = 0">
+                                            <mat-icon>edit</mat-icon>
+                                        </button>
+                                        <button
+                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode"
+                                            type="button" mat-icon-button (click)="delete(single_list,'C')">
+                                            <mat-icon>delete</mat-icon>
+                                        </button>
+                                    </td>
+                                    <td class="border-r border-gray-400">{{single_list.TourDate}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.PlanPurposeName}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.DepartureFromPlace}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.DepartureFromTime}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.ArrivalAtPlace}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.ArrivalAtTime}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.NoOfDefaulterContacted}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.ResultContactMade}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.MeasureBoostUpRecord}}</td>
+                                    <td class="border-r border-gray-400">{{single_list.Remarks}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
 
                         <div
                             class="col-lg-12 p-0  third-table  overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
