--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -1,10 +1,14 @@
 <div
-    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
+    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent"
+    #container>
 
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF REGIONAL CHIEF</div>
+            <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
+                REGIONAL CHIEF
+                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Previous</button>
+            </div>
         </div>
     </div>
 
@@ -34,7 +38,8 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">P.P.NO<strong class="matMandatory">*</strong>
                                         </mat-label>
-                                        <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly" placeholder="Ppno"/>
+                                        <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"
+                                               placeholder="Ppno"/>
                                     </mat-form-field>
                                 </div>
 
@@ -53,9 +58,11 @@
                                             class="matMandatory">*</strong></mat-label>
                                         <input matInput readonly [matDatepicker]="picker2" formControlName="TourDate"
                                                maxlength="8"
-                                               autocomplete="off" [max]="maxDate" (dateChange)="setDate()" appNumberOnly placeholder="Tour Date"/>
+                                               autocomplete="off" [max]="maxDate" (dateChange)="setDate()" appNumberOnly
+                                               placeholder="Tour Date"/>
                                         <mat-datepicker-toggle (click)="checkZone()" [disabled]="!zone" matSuffix
-                                                               [for]="picker2" [disabled]="(!zone || !edit_mode) && currentActivity.R"></mat-datepicker-toggle>
+                                                               [for]="picker2"
+                                                               [disabled]="(!zone || !edit_mode) && currentActivity.R"></mat-datepicker-toggle>
                                         <mat-datepicker #picker2></mat-datepicker>
                                     </mat-form-field>
                                 </div>
@@ -63,7 +70,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="TourPlanId" [disabled]="!edit_mode && currentActivity.R">
+                                        <mat-select formControlName="TourPlanId"
+                                                    [disabled]="!edit_mode && currentActivity.R">
                                             <mat-option>
                                                 Select
                                             </mat-option>
@@ -92,7 +100,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Departure Place<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input matInput formControlName="DepartureFromPlace" autocomplete="off" placeholder="Departure Place"/>
+                                            <input matInput formControlName="DepartureFromPlace" autocomplete="off"
+                                                   placeholder="Departure Place"/>
                                         </mat-form-field>
                                     </div>
 
@@ -104,7 +113,9 @@
                                             <input type="text" matInput [ngxTimepicker]="timepickerDeparture"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="DepartureFromTime" placeholder=">Departure Time"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerDeparture)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -121,7 +132,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Arrival Place<strong class="matMandatory">*</strong>
                                             </mat-label>
-                                            <input matInput formControlName="ArrivalAtPlace" autocomplete="off" placeholder="Arrival Place"/>
+                                            <input matInput formControlName="ArrivalAtPlace" autocomplete="off"
+                                                   placeholder="Arrival Place"/>
                                         </mat-form-field>
                                     </div>
 
@@ -131,8 +143,11 @@
                                             <mat-label class="customMatLabel">Arrival Time<strong
                                                 class="matMandatory">*</strong></mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerArrival"
-                                                   [format]="DateFormat()" readonly formControlName="ArrivalAtTime" placeholder="Arrival Time"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
+                                                   [format]="DateFormat()" readonly formControlName="ArrivalAtTime"
+                                                   placeholder="Arrival Time"/>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerArrival)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -146,7 +161,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="NoOfDefaulterContacted" placeholder="No. Of Defaulters Contacted"
+                                            <input appNumberOnly matInput formControlName="NoOfDefaulterContacted"
+                                                   placeholder="No. Of Defaulters Contacted"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -155,7 +171,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input appNumberOnly matInput formControlName="ResultContactMade" placeholder="Results Of Contacts So Made"
+                                            <input appNumberOnly matInput formControlName="ResultContactMade"
+                                                   placeholder="Results Of Contacts So Made"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -164,7 +181,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
-                                            <input appNumberOnly matInput formControlName="MeasureBoostUpRecord" placeholder="Measure Boosting Up Record"
+                                            <input appNumberOnly matInput formControlName="MeasureBoostUpRecord"
+                                                   placeholder="Measure Boosting Up Record"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -172,7 +190,7 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
-                                            <input  matInput formControlName="Remarks" placeholder="Remarks"
+                                            <input matInput formControlName="Remarks" placeholder="Remarks"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -185,24 +203,28 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button" *ngIf="isUpdate===false && currentActivity.C && edit_mode" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===false && currentActivity.C && edit_mode"
+                                        class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button type="button" *ngIf="isUpdate===true && currentActivity.U && edit_mode" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===true && currentActivity.U && edit_mode"
+                                        class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
                                 <button type="button" mat-raised-button class="mr-2"
-                                        color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U && edit_mode" (click)="changeStatus('','S')">
+                                        color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U && edit_mode"
+                                        (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
                                 <button type="button"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button color="danger" *ngIf="currentActivity.C && edit_mode" (click)="onClearForm()">
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C && edit_mode"
+                                        (click)="onClearForm()">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
                                 </button>
@@ -240,12 +262,16 @@
                                 <tbody *ngFor="let single_list of TourDiaryList">
                                 <tr>
                                     <td class="border-r border-gray-400">
-                                        <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode" type="button" mat-icon-button
-                                                (click)="edit(single_list); container.scrollTop = 0">
+                                        <button
+                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode"
+                                            type="button" mat-icon-button
+                                            (click)="edit(single_list); container.scrollTop = 0">
                                             <mat-icon>edit</mat-icon>
                                         </button>
-                                        <button *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode" type="button" mat-icon-button
-                                                (click)="delete(single_list,'C')">
+                                        <button
+                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode"
+                                            type="button" mat-icon-button
+                                            (click)="delete(single_list,'C')">
                                             <mat-icon>delete</mat-icon>
                                         </button>
                                     </td>
