--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -6,7 +6,7 @@
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF
-                <button mat-flat-button color="primary" (click)="previous()" *ngIf="has_previous">Previous</button>
+                <button mat-flat-button color="primary" (click)="previous()" *ngIf="has_previous">Back To List</button>
             </div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
