--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -7,7 +7,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF ZM
                 (RECOVERY & SAM)
-                <button (click)="previous()" *ngIf="has_previous">Previous</button>
+                <button (click)="previous()" *ngIf="has_previous">Back To List</button>
             </div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
