--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -7,7 +7,8 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
                 BRANCH MANAGER
-                <button mat-flat-button color="primary" (click)="previousPage()" *ngIf="has_previous">Previous</button>
+                <button mat-flat-button color="primary" (click)="previousPage()" *ngIf="has_previous">Back To List
+                </button>
             </div>
             <!--            <button (click)="assignValues()">DO it</button>-->
         </div>
