--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -7,7 +7,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
                 PROVINCIAL CHIEF
-                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Previous</button>
+                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Back To List</button>
             </div>
             <!--            <button (click)="assignValues()">Patch Dummy Data</button>-->
         </div>
