--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -7,7 +7,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
                 TOUR DIARY & PROGRESS REPORT OF RECOVERY OFFICER
-                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Previous</button>
+                <button mat-flat-button color="primary" *ngIf="has_previous" (click)="previousPage()">Back To List</button>
             </div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
