--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -9,7 +9,7 @@
                  style="cursor: pointer;justify-content: space-between;">
                 <div class=" self-center ml-8 w-64">
                     <span class=" text-green">
-                          {{activity.UserName}} ({{activity.UserPPNo}})
+                          {{activity.UserName}} ({{activity.PPNo}})
                         </span>
                 </div>
 
