--- a/src/app/modules/auth/sign-out/sign-out.component.html
+++ b/src/app/modules/auth/sign-out/sign-out.component.html
@@ -24,8 +24,8 @@
             <!-- Form footer -->
             <div class="mt-8 text-md font-medium text-secondary text-center">
                 <span>Go to</span>
-                <a (click)="logout()"
-                    class="ml-1 text-primary-500 hover:underline"
+                <a [routerLink]="['sign-in']"
+                   class="ml-1 text-primary-500 hover:underline"
                 >sign in
                 </a>
             </div>
