--- a/src/app/modules/tour-dairy/tour-diary-approval/tour-diary-approval.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval/tour-diary-approval.component.html
@@ -58,7 +58,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>PPNO</mat-label>
-                                <input matInput formControlName="PPNO">
+                                <input matInput formControlName="PPNo">
                             </mat-form-field>
                         </div>
                     </div>
